--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/ObjectBuffer.js",
   "author": "Marco A.",
   "license": "MIT",
+  "url": "https://github.com/marco-a/object-buffer",
   "dependencies": {
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
