--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: node_js
 node_js: [5.4.0]
+after_script:
+- "npm run coverage"
+- "npm install coveralls && cat ./coverage/lcov.info | coveralls"
